client/assets/css/app.css
/* app css stylesheet */

a {
  text-decoration: none !important;
  cursor: pointer;
}

p {
  font-family: 'Raleway';
}

header {
  border-top: 2em solid rgb(205, 205, 205);
  background-color: rgb(255, 255, 255);
  padding: 2.8368794326241134% 0;
  top: 0;
  left: 0;
  width: 100%;
}

.clearfix:after { 
   content: " ";
   display: block; 
   height: 0; 
   clear: both;
}

.navibar {
  font: normal 1.4em 'Raleway', Arial, sans-serif;
  font-weight: 600;
}

.navibar a {
  color: rgb(205, 205, 205);
}

.navibar a:hover, .navibar a:focus, .navibar a:active, .navibar a.active {
  color: rgb(0, 0, 0);
}

footer {
  text-align: center;
  font: normal 100% 'Raleway', Arial, sans-serif;
  background-color: rgb(255, 255, 255);
  border-top: 2em solid rgb(255, 255, 255);
  border-bottom: 2em solid rgb(255, 255, 255);
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
}

footer ul {
  display: inline;
  padding: 0;
}

footer li {
  display: inline;
}

.ext-icon {
  width: 32px;
  margin: 0 5px;
}

#home-img {
  background-image: url('../img/botswana-grey.min.jpeg');
  background-position: 60% 50%;
  background-size: cover;
  max-width: 100%;
  max-height: 100%;
  position: relative;
  height: 70vh
}

#home-caption {
  position: absolute;
  top: 5px;
  right: 20px;
  z-index: 1;
  font: 400 1em Raleway,Arial,sans-serif;
  color: rgb(245, 245, 245);
}

.container-overflow {
  overflow: scroll;
  height: auto;
}

.row-md {
  border-bottom: 1px dotted rgb(225, 225, 225);
  /*padding: 5vh 0;*/
  margin-top: 5vh;
}

.col-md-5 {
  background-position: 50% 50%;
  height: 35vh;
  margin: 2.5vh 15px;
  background-repeat: no-repeat;
  padding-left: 0;
  padding-right: 0;
}

.col-md-3 {
  height: auto;
  margin: 2.5vh 0;
}

.links-md-3 {
  text-align: center;
}

.display-block {
  display: block;
}

.display-none {
  display: none;
}

.margin-bottom {
  margin-bottom: 15px;
}

.tag {
  font: normal 100% 'Raleway', Arial, sans-serif;
  margin: 5px 5px 5px 0;
  background-color: rgb(205, 205, 205) !important;
  cursor: pointer !important;
}

.list-inline {
  margin-left: 0 !important;
}

/*==================================================
=            Bootstrap 3 Media Queries             =
==================================================*/

  /*==========  Mobile First Method  ==========*/

  /* Custom, iPhone Retina */ 
  @media only screen and (min-width : 320px) {
    #home-img {
      height: 83vh;
    }

    .logo {
      width: 60px;
      height: 67px;
    }

    a.logo {
      margin-left: 20px;
      margin-right: 20px;
      float: left;
      width: 60px;
      height: 67px;
    }

    .menu {
      width: 30px;
      height: 22px;
      cursor: pointer;
    }

    a.menu {
      margin: 0 20px 0 0;
      float: right;
      width: 30px;
      height: 22px;
      line-height: 67px;
    }

    .glyphicon {
      font-size: 1.8em;
      vertical-align: middle;
      color: rgb(0, 0, 0);
    }

    .navibar {
      /*display: none;*/
      clear: left;
      width: 100%;
      list-style: none;
      padding: 0;
    }

    .navibar li {
      background-color: rgb(245, 245, 245);
      border: 1px solid rgb(255, 255, 255);
      padding: 0 0 0 30px;
    }

    .row {
      margin-left: 0 !important;
      margin-right: 0 !important;
    }

    footer {
      bottom: auto;
      height: 175px;
    }
  }

  @media only screen and (orientation:portrait) and (min-width : 320px) {

  }

  @media only screen and (orientation:landscape) and (min-width : 320px) {

  }

  /* Extra Small Devices, Phones */ 
  @media only screen and (min-width : 480px) {

  }

  /* Small Devices, Tablets */
  @media only screen and (min-width : 768px) {
    header {
      position: fixed;
      z-index: 2;
    }

    section {
      position: relative;
      margin-top: 18%;
    }

    #home-img {
      height: 70vh;
    }

    .logo {
      width: 100px;
      height: 111px;
    }

    a.logo {
      margin: 0 70px;
      float: left;
      width: 100px;
      height: 111px;
    }

    .menu {
      display: none;
    }

    .navibar {
      display: inline !important;
      line-height: 111px;
    }

    .navibar li {
      display: inline;
      margin: 0 6.0435132957292505% 0 0;
      background-color: rgb(255, 255, 255);
      padding: 0;
    }

    /*.container-overflow {
      height: 70vh;
    }*/

    .row-md {
      /*height: 50vh;*/
      height: auto;
    }

    footer {
      height: 150px;
    }
  }

  /* Medium Devices, Desktops */
  @media only screen and (min-width : 992px) {
  }

  /* Large Devices, Wide Screens */
  @media only screen and (min-width : 1200px) {

  }

